--- a/src/pages/PendingAudits.css
+++ b/src/pages/PendingAudits.css
@@ -197,6 +197,40 @@ body:has(.sidebar.collapsed) .pending-audits-main {
     width: 100%;
     border-collapse: collapse;
     font-size: 13px;
+    table-layout: fixed;
+}
+
+/* Column Widths */
+.audits-table th:nth-child(1) {
+    width: 20%;
+}
+
+.audits-table th:nth-child(2) {
+    width: 10%;
+}
+
+.audits-table th:nth-child(3) {
+    width: 12%;
+}
+
+.audits-table th:nth-child(4) {
+    width: 12%;
+}
+
+.audits-table th:nth-child(5) {
+    width: 12%;
+}
+
+.audits-table th:nth-child(6) {
+    width: 12%;
+}
+
+.audits-table th:nth-child(7) {
+    width: 12%;
+}
+
+.audits-table th:nth-child(8) {
+    width: 10%;
 }
 
 .audits-table thead {
